Using type definition files

--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "devDependencies": {
+    "faker": "^5.5.3",
     "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "@types/faker": "^6.6.9",
-    "faker": "^6.6.6"
   }
 }
